--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,13 @@
 .game_board{
-  max-width: 420px;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid black;
+  border: 2px solid #000;
+  margin: 0 auto;
 }
 
 .game_field{
-  width: 40px;
-  height: 40px;
-  border: 1px solid black;
+  border: 1px solid #000;
+  width: 38px;
+  height: 38px;
 }
+
